# Saturation-Plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SaturationDSP.h
packaging/: create-dmg.sh
